Prevent code block from overflowing

--- a/src/assets/styles/article.scss
+++ b/src/assets/styles/article.scss
@@ -57,6 +57,7 @@ pre {
     padding: 1em;
     background: rgb(var(--prominence));
     border-radius: 20px;
+    overflow-x: auto;
 
     code {
         padding: 0;
